# ugad4fun

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  create_gad_image.sh  setup.py  start_gad_container.sh
TBD/: README.md  default_with_image_passthrough.xml  imagepassthroughgadget.cpp  imagepassthroughgadget.h
gad4fun/recon_config/: radial_recon.xml
gadgetron/: ReadMe.txt
gadgetron-cpp-demo/imagepassthroughgadget/: CMakeLists.txt  README.md
gadgetron-cpp-demo/imagepassthroughgadget/config/: default_with_image_passthrough.xml
gadgetron-python-demo/: LICENSE  README.md  dataflow_monitor.xml  dataflow_monitor_and_plotsave_demo.xml  dummy_conn_recon_acquisitions.py  gadgetron_python_sample.xml  idea.ipynb  idea_test.ipynb  passthough_demo.py  passthough_demo.xml  plotsave_demo.py  plotsave_demo.xml  recon_radial.xml  testdata.h5
gadgetron/config/: MOLLI_T1_Moco.xml  default.xml  line_in_line_out.xml  recon_image.xml
gadgetron_data/: gadgetron_start.sh  pynufft_install.sh
gadgetron_data/config/: radial.xml
gadgetron_data/python/: radial_recon.py  recon_image.py
gadpipe/notebook/: idea_test.ipynb
gadpipe/recon/: radial_recon.py
gadpipe/recon_config/: radial_recon.xml
gadpipe/utils/: dummy_conn.py
notebook/: idea_test.ipynb
scripts/: create_gad_image.sh  install_config.sh  link_config.sh  start_gad_container.sh
shell/: create_gad_image.sh
ugad4fun/recon/: line_in_line_out.py  radial_recon.py
ugad4fun/recon_config/: image_recon.xml  line_in_line_out.xml  plotsave_demo_start_by_hand.xml  radial_recon.xml
ugad4fun/utils/: dummy_conn.py
(+2 files in other folders)
